--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
@@ -22,8 +22,8 @@
         android:src="@mipmap/label_status_new"
         android:visibility="gone"
         android:contentDescription="@null"/>
-    <!-- サービス名アイコン -->
 
+    <!-- サービス名アイコン -->
     <LinearLayout
         android:layout_marginTop="@dimen/home_contents_service_margin"
         android:layout_marginEnd="@dimen/home_contents_service_margin"
@@ -35,7 +35,6 @@
         <ImageView
             android:id="@+id/home_main_recyclerview_item_iv_service_icon_first"
             android:layout_width="wrap_content"
-            android:layout_marginEnd="@dimen/home_contents_service_margin"
             android:layout_height="match_parent"
             android:visibility="gone"
             android:contentDescription="@null"/>
@@ -44,6 +43,7 @@
             android:id="@+id/home_main_recyclerview_item_iv_service_icon_second"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/home_contents_service_margin"
             android:visibility="gone"
             android:contentDescription="@null"/>
     </LinearLayout>
