https://agile.apccloud.jp/jira/browse/DREM-2471
[実装](素材・レイアウトの最新化)レイアウト変更（その他）‐ホーム系。番組表含む
ダミーコードのコミットをrevert

Change-Id: Iab8605778a06389657a53805cdbad9dbfdddde4f

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
@@ -2,8 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/home_contents_thumbnail_width"
     android:layout_height="@dimen/home_contents_thumbnail_height"
-    android:background="@color/colorAccent">
-    <!--android:background="@color/home_main_background_color"-->
+    android:background="@color/home_main_background_color"
+    >
+
     <ImageView
         android:id="@+id/home_main_recyclerview_item_iv"
         android:layout_width="match_parent"
@@ -12,6 +13,7 @@
         android:src="@mipmap/loading_scroll"
         android:scaleType="fitCenter"
         android:contentDescription="@null"/>
+
     <!-- Newアイコン-->
     <ImageView
         android:id="@+id/home_main_recyclerview_item_iv_new"
