--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -63,6 +63,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/loading_movie"
+                android:adjustViewBounds="true"
                 android:contentDescription="@string/contents_info_thumbnail_text"
                 android:scaleType="fitCenter" />
 
