DREM-2192 素材・レイアウトの最新化
録画ボタンのレイアウト修正、文言誤り修正

Change-Id: I6d28e5f0615d11739af247e9b1159466ad1151bb

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
@@ -65,7 +65,7 @@
 
                 <LinearLayout
                     android:id="@+id/dtv_content_detail_fragment_detail_area"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_gravity="center_vertical"
@@ -104,7 +104,6 @@
 
                 <RelativeLayout
                     android:id="@+id/dtv_contents_detail_fragment_iv_area"
-                    android:layout_weight="3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical">
