--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
@@ -57,18 +57,19 @@
                 android:textColor="@color/white_text"
                 android:textSize="@dimen/contents_detail_contents_text_size" />
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="@dimen/contents_detail_contents_text_size">
 
                 <LinearLayout
                     android:id="@+id/dtv_content_detail_fragment_detail_area"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
+                    android:layout_toStartOf="@+id/dtv_contents_detail_fragment_rec_iv"
                     android:orientation="vertical">
 
                     <TextView
@@ -102,36 +103,32 @@
                         android:gravity="center_vertical" />
                 </LinearLayout>
 
-                <RelativeLayout
-                    android:id="@+id/dtv_contents_detail_fragment_iv_area"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical">
+                <ImageView
+                    android:id="@+id/dtv_contents_detail_fragment_rec_iv"
+                    android:layout_width="@dimen/contents_detail_icon_size"
+                    android:layout_height="@dimen/contents_detail_icon_size"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/contents_detail_icon_margin"
+                    android:layout_toStartOf="@+id/contents_detail_clip_button"
+                    android:contentDescription="@null"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/recording_reservation_rec_icon_selector"
+                    android:visibility="gone" />
 
-                    <ImageView
-                        android:id="@+id/dtv_contents_detail_fragment_rec_iv"
-                        android:layout_width="@dimen/contents_detail_icon_size"
-                        android:layout_height="@dimen/contents_detail_icon_size"
-                        android:layout_marginEnd="@dimen/contents_detail_icon_margin"
-                        android:layout_toStartOf="@+id/contents_detail_clip_button"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/recording_reservation_rec_icon_selector"
-                        android:visibility="gone"
-                        android:contentDescription="@null"/>
-
-                    <ImageView
-                        android:id="@+id/contents_detail_clip_button"
-                        android:layout_width="@dimen/contents_detail_icon_size"
-                        android:layout_height="@dimen/contents_detail_icon_size"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="@dimen/contents_detail_clip_margin"
-                        android:clickable="true"
-                        android:gravity="center_vertical"
-                        android:scaleType="fitXY"
-                        android:src="@mipmap/icon_circle_opacity_clip"
-                        android:contentDescription="@null"/>
-                </RelativeLayout>
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/contents_detail_clip_button"
+                    android:layout_width="@dimen/contents_detail_icon_size"
+                    android:layout_height="@dimen/contents_detail_icon_size"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/contents_detail_clip_margin"
+                    android:clickable="true"
+                    android:contentDescription="@null"
+                    android:gravity="center_vertical"
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/icon_circle_opacity_clip"
+                    android:visibility="gone" />
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/dtv_contents_detail_fragment_detail_info"
