--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
@@ -36,7 +36,7 @@
                     <RelativeLayout
                         android:id="@+id/bottom_view_ll"
                         android:layout_width="match_parent"
-                        android:layout_height="52dp"
+                        android:layout_height="@dimen/remote_control_display_button_height"
                         android:layout_gravity="center_horizontal"
                         android:orientation="horizontal"
                         android:visibility="visible"
