--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -174,6 +174,8 @@
     <!--リモコン -->
     <dimen name="remote_watch_by_tv_bottom_corners">8dp</dimen>
     <dimen name="remote_watch_by_tv_bottom_width">8dp</dimen>
+    <dimen name="remote_control_display_button_height">52dp</dimen>
+    <dimen name="remote_control_display_button_top_margin">36dp</dimen>
 
     <!-- WatchingVideoActivity -->
     <dimen name="watch_listen_video_divider_high">1dp</dimen>
