--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
@@ -69,7 +69,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
-                    android:layout_toStartOf="@+id/dtv_contents_detail_fragment_rec_iv"
+                    android:layout_toStartOf="@+id/dtv_contents_detail_fragment_button_Layout"
                     android:orientation="vertical">
 
                     <TextView
@@ -103,31 +103,40 @@
                         android:gravity="center_vertical" />
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/dtv_contents_detail_fragment_rec_iv"
-                    android:layout_width="@dimen/contents_detail_icon_size"
-                    android:layout_height="@dimen/contents_detail_icon_size"
-                    android:layout_centerVertical="true"
-                    android:layout_marginEnd="@dimen/contents_detail_icon_margin"
-                    android:layout_toStartOf="@+id/contents_detail_clip_button"
-                    android:contentDescription="@null"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/recording_reservation_rec_icon_selector"
-                    android:visibility="gone" />
-
-                <ImageView
-                    android:id="@+id/contents_detail_clip_button"
-                    android:layout_width="@dimen/contents_detail_icon_size"
-                    android:layout_height="@dimen/contents_detail_icon_size"
+                <LinearLayout
+                    android:id="@+id/dtv_contents_detail_fragment_button_Layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginEnd="@dimen/contents_detail_clip_margin"
-                    android:clickable="true"
-                    android:contentDescription="@null"
-                    android:gravity="center_vertical"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/icon_circle_opacity_clip"
-                    android:visibility="gone" />
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/dtv_contents_detail_fragment_rec_iv"
+                        android:layout_width="@dimen/contents_detail_icon_size"
+                        android:layout_height="@dimen/contents_detail_icon_size"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginEnd="@dimen/contents_detail_icon_margin"
+                        android:layout_weight="1"
+                        android:contentDescription="@null"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/recording_reservation_rec_icon_selector"
+                        android:visibility="gone" />
+
+                    <ImageView
+                        android:id="@+id/contents_detail_clip_button"
+                        android:layout_width="@dimen/contents_detail_icon_size"
+                        android:layout_height="@dimen/contents_detail_icon_size"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginEnd="@dimen/contents_detail_clip_margin"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:contentDescription="@null"
+                        android:gravity="center_vertical"
+                        android:scaleType="fitXY"
+                        android:src="@mipmap/icon_circle_opacity_clip"
+                        android:visibility="gone" />
+                </LinearLayout>
             </RelativeLayout>
 
             <TextView
