--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
@@ -20,6 +20,7 @@
     </RelativeLayout>
 
     <ScrollView
+        android:id="@+id/home_main_layout_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -75,6 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@mipmap/home_pr"
+                android:contentDescription="@null"
                 android:scaleType="fitCenter" />
         </LinearLayout>
 
