DREM-1301 未ログイン・未契約ログイン時のログイン／契約への誘導対応
Home画面に未ログイン時にログイン導線ボタンを表示する処理を追加、その他リファクタ(不要なメソッド削除、簡単なfindBugs対応)

Change-Id: Ia3a99077854e576596317ae4aa77880e75610327

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
@@ -39,6 +39,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/home_main_layout_top_wire_area_text"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/home_no_contract_text_height"
                     android:layout_marginTop="@dimen/home_no_contract_text_top_margin"
