--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -213,8 +213,8 @@
     <dimen name="video_contents_genre_text_size">14dp</dimen>
     <dimen name="video_contents_genre_num_size">13dp</dimen>
     <dimen name="video_contents_divider_radius">1dp</dimen>
-    <dimen name="video_contents_divider_inset_left">15sp</dimen>
-    <dimen name="video_contents_divider_inset_right">0sp</dimen>
+    <dimen name="video_contents_divider_inset_left">15dp</dimen>
+    <dimen name="video_contents_divider_inset_right">0dp</dimen>
     <dimen name="video_contents_divider_divider_height">1dp</dimen>
     <dimen name="video_contents_list_sort_diameter">56dp</dimen>
     <dimen name="video_contents_list_sort_margin">16dp</dimen>
