--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -99,7 +99,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/tab_layout_area_height"
             android:background="@color/dtv_contents_detail_tab_background_color"
-            android:visibility="visible" />
+            android:visibility="invisible" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/dtv_contents_detail_main_layout_vp"
