--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_error_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_error_layout.xml
@@ -97,8 +97,10 @@
         android:layout_marginRight="@dimen/launch_stb_list_start_margin"
         android:background="@color/stb_select_white_color"
         android:gravity="center"
+        android:textStyle="bold"
         android:text="@string/str_stb_no_pair_use_text"
         android:textColor="@color/stb_select_black_color"
+        android:textSize="@dimen/launch_text_size"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/launch_image_bottom_margin"/>
