--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
@@ -90,13 +90,38 @@
             android:textSize="@dimen/home_contents_thumbnail_title_text_size"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/home_main_recyclerview_item_tv_time"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/home_item_contents_text_color"
-            android:textSize="@dimen/home_contents_thumbnail_state_text_size"
-            android:maxLines="1"
-            android:ellipsize="end"/>
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/home_main_recyclerview_item_tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/home_item_contents_text_color"
+                android:textSize="@dimen/home_contents_thumbnail_state_text_size"
+                android:maxLines="1"
+                android:ellipsize="end"/>
+
+            <TextView
+                android:id="@+id/home_main_recyclerview_item_hyphen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/home_item_contents_text_color"
+                android:textSize="@dimen/home_contents_thumbnail_state_text_size"
+                android:maxLines="1"
+                android:text="@string/home_contents_hyphen"
+                android:ellipsize="end"
+                android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/home_main_recyclerview_item_tv_channel_or_missed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/home_item_contents_text_color"
+                android:textSize="@dimen/home_contents_thumbnail_state_text_size"
+                android:maxLines="1"
+                android:ellipsize="end"/>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
