DREM-2247 【初回リリース】【Android】コンテンツ詳細画面に遷移すると、番組詳細のみ文字サイズの変更を受ける
TextSizeを固定するように修正

Change-Id: I70894d9aa340b2fa0b8710229e4c4995dedaa88c

--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/menu_login_foot.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/menu_login_foot.xml
@@ -12,6 +12,7 @@
 		android:background="@android:color/darker_gray"
 		android:padding="10dp"
 		android:text="アカウント名"
+		android:textSize="14dp"
 		android:textColor="@android:color/white"/>
 
 </RelativeLayout>
