--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
@@ -124,6 +124,7 @@
                     android:id="@+id/remocon_bottom"
                     android:layout_alignParentBottom="true"
                     android:layout_width="match_parent"
+                    android:textSize="14dp"
                     android:layout_height="16dp"/>
 
                 <LinearLayout
