--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/nav_item_lv_menu_program.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/nav_item_lv_menu_program.xml
@@ -11,6 +11,7 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:textStyle="bold"
+        android:textSize="14dp"
         android:textColor="@color/menuListProgramTitle" />
 
     <ImageView
@@ -34,6 +35,7 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/global_menu_list_item_count_right_margin"
         android:textColor="@color/menuListProgramTitle"
+        android:textSize="13dp"
         android:layout_toStartOf="@id/iv_arrow" />
 
 </RelativeLayout>
