--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/edit_my_channel_list_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/edit_my_channel_list_item.xml
@@ -19,6 +19,7 @@
 			android:layout_width="@dimen/edit_my_channel_list_item_no_tv_width"
 			android:layout_height="@dimen/edit_my_channel_list_item_no_tv_width"
 			android:layout_centerInParent="true"
+			android:textSize="12dp"
 			android:gravity="center"/>
 	</RelativeLayout>
 	
