--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_list_main_layout.xml
@@ -101,5 +101,6 @@
         android:textColor="@color/white_text"
         android:layout_centerInParent="true"
         android:text="@string/tv_program_tip"
+		android:textSize="14dp"
         android:visibility="gone"/>
 </RelativeLayout>
