ホーム画面でサブタイトルを出さないパターンでサブタイトルの領域分タイトルの表示位置があがっていた箇所を修正
デフォルトをGONEに設定するよう修正

Change-Id: Idb7cf96408425da1fc6ceac797a878d89d602c7e

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
@@ -101,7 +101,8 @@
                 android:textColor="@color/home_item_contents_text_color"
                 android:textSize="@dimen/home_contents_thumbnail_state_text_size"
                 android:maxLines="1"
-                android:ellipsize="end"/>
+                android:ellipsize="end"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/home_main_recyclerview_item_hyphen"
@@ -121,7 +122,8 @@
                 android:textColor="@color/home_item_contents_text_color"
                 android:textSize="@dimen/home_contents_thumbnail_state_text_size"
                 android:maxLines="1"
-                android:ellipsize="end"/>
+                android:ellipsize="end"
+                android:visibility="gone"/>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
