--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/notice_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/notice_main_layout.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent">
 
     <WebView
-        android:id="@+id/news_main_webview"
+        android:id="@+id/notice_main_webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </RelativeLayout>
