--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -105,7 +105,7 @@
     <color name="list_view_divider">#333333</color>
 
     <!--//設定画面-->
-    <color name="setting_list_background_color">#1c1c1c</color>
+    <color name="setting_list_background_color">#1d1d1d</color>
     <color name="setting_list_divider_color">#333333</color>
     <color name="setting_background_color_black">#000000</color>
 
@@ -138,4 +138,5 @@
     <!--//アプリケーション情報-->
     <color name="application_info_application_title">#808080</color>
     <color name="application_info_application_title_value">#ffffff</color>
+    <color name="application_info_background_color">#1d1d1d</color>
 </resources>
