--- a/dTVTerminalApp/app/src/main/res/drawable/remote_viewpager_bottom_corner.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/remote_viewpager_bottom_corner.xml
@@ -4,9 +4,9 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E5E5E5" />
+    <solid android:color="@color/remote_controller_background" />
     <corners android:bottomLeftRadius="8dp"
         android:bottomRightRadius="8dp"
         />
-    <stroke android:width="0dp" android:color="#E5E5E5" />
+    <stroke android:width="0dp" android:color="@color/remote_controller_background" />
 </shape>
