--- a/dTVTerminalApp/app/src/main/res/drawable/remote_watch_by_tv_top_corner.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/remote_watch_by_tv_top_corner.xml
@@ -4,8 +4,8 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E5E5E5" />
+    <solid android:color="@color/remote_controller_background" />
     <corners android:topLeftRadius="10dp"
         android:topRightRadius="10dp"  />
-    <stroke android:width="0dp" android:color="#E5E5E5" />
+    <stroke android:width="0dp" android:color="@color/remote_controller_background" />
 </shape>
