初回利用規約画面からSTB選択画面遷移時白いちらつき不具合修正
Change-Id: I03d4fa1ad090f6643e0388a372cb69b0a60f8f00

--- a/dTVTerminalApp/app/src/main/res/values/styles.xml
+++ b/dTVTerminalApp/app/src/main/res/values/styles.xml
@@ -44,6 +44,7 @@
     <!--Activity遷移時トランザクションをなくす -->
     <style name="STBTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:windowAnimationStyle">@style/Animation</item>
+        <item name="android:windowDisablePreview">true</item>
         <item name="android:windowNoTitle">true</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/header_background_color_red</item>
