DREM-2827  【初回リリース】【Android】dアカウントサービス接続失敗メッセージ（ネットワークエラー）のエラーダイアログが、[OK]ボタンをタップしていないのに非表示化されてしまう
Change-Id: If40bce5d368828ada634a397b9fd0ea241159646

--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/launch_application_terms_of_service.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/launch_application_terms_of_service.xml
@@ -290,6 +290,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/application_privacy_all_text"
                 android:layout_marginStart="@dimen/launch_terms_of_service_text_margin"
+                android:layout_marginEnd="@dimen/launch_terms_of_service_text_margin"
                 android:layout_marginTop="@dimen/launch_text_left_padding"
                 android:gravity="center|start"
                 android:text="@string/str_launch_all_text_detail_confirm_link"
