DRAM-2837 【初回リリース】【Android】STB選択画面の「以後、表示しない」のチェックボックスが、余白部分をタップしても反応してしまう
Change-Id: I1b79d5149960d1021f7b238ebfef937ac81cfb21

--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
@@ -70,8 +70,9 @@
 
     <TextView
         android:id="@+id/launch_select_check_box_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/launch_stb_checkbox_high"
+        android:maxLines="1"
         android:text="@string/str_stb_next_not_display_text"
         android:textSize="@dimen/launch_text_size"
         android:paddingStart="@dimen/launch_stb_checkbox_right_margin"
