DREM-2322 【初回リリース】【Android】SC-03Gにて、メニューのひかりTVメニュータイトル、TVアプリ起動導線のタイトルが二重表示されている https://agile.apccloud.jp/jira/browse/DREM-2322
Change-Id: I351be6f2f392b01950815f2fcdd107f882868f5c

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -46,6 +46,7 @@
     <color name="home_item_contents_text_color">@color/basic_text_color_white</color>
     <!--Global Menu-->
     <color name="global_menu_popup_window_background_color">#ffffff</color>
+    <color name="global_menu_transparent_text_color">#00000000</color>
     <!-- キーワード検索 -->
     <color name="keyword_search_background_color">#1d1d1d</color>
     <color name="keyword_search_background_focus">#EEEEEE</color>
