--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/nav_item_lv_menu_program.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/nav_item_lv_menu_program.xml
@@ -38,4 +38,12 @@
         android:textSize="13dp"
         android:layout_toStartOf="@id/iv_arrow" />
 
+    <View
+        android:id="@+id/menu_item_divider"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_marginLeft="16dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/setting_list_divider_color" />
+
 </RelativeLayout>
