--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/nav_pop.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/nav_pop.xml
@@ -7,9 +7,7 @@
     <ListView
         android:id="@+id/menu_list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:divider="@drawable/list_item_divider"
-        android:dividerHeight="1dp">
+        android:layout_height="wrap_content">
     </ListView>
 
 </LinearLayout>
