DREM-2325 【初回リリース】【Android】【iOS】コンテンツ詳細でタブ切替時、読み込みアイコンが表示されない
Change-Id: Iaceaa891e5948958e9c9165eaa4a413bdf814a55

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_channel_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_channel_fragment.xml
@@ -11,5 +11,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:listSelector="@drawable/content_detail_channel_list_item_selector"/>
+    <!-- プログレスバー -->
+    <RelativeLayout
+        android:id="@+id/channel_progress_rl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/channel_progress"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
 
 </RelativeLayout>
