DREM-2249  【初回リリース】【Android】番組表に遷移直後の時間軸と現在時刻ラインは正しく表示されているが番組は過去のものを表示している
Change-Id: I7f7f67d3acd1474a7cb336e82acac5506b3303bf

--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -292,6 +292,7 @@
     <dimen name="panel_content_thumbnail_height">69dp</dimen>
 	<dimen name="panel_content_thumbnail_margin_top">16dp</dimen>
     <dimen name="tv_program_list_cur_time_height">1dp</dimen>
+    <dimen name="tv_program_list_program_eria_height">4320dp</dimen>
     <dimen name="panel_content_detail_margin_top">4dp</dimen>
     <dimen name="tv_program_list_main_layout_calendar_arrow_width">24dp</dimen>
     <dimen name="tv_program_list_main_layout_calendar_arrow_height">24dp</dimen>
