--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_list_main_layout.xml
@@ -51,14 +51,22 @@
             android:layout_below="@id/tv_program_list_main_layout_channel_rv"
             android:layout_toEndOf="@id/tv_program_list_main_layout_time_sl"
             android:scrollbars="none">
-
-            <com.nttdocomo.android.tvterminalapp.view.ProgramRecyclerView
-                android:id="@+id/tv_program_list_main_layout_channeldetail_rv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fadingEdge="none"
-                android:fadingEdgeLength="0dp"
-                android:overScrollMode="never" />
+			<LinearLayout
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content">
+				<FrameLayout
+					android:layout_width="wrap_content"
+					android:layout_height="@dimen/tv_program_list_program_eria_height"
+					android:visibility="invisible">
+				</FrameLayout>
+				<com.nttdocomo.android.tvterminalapp.view.ProgramRecyclerView
+					android:id="@+id/tv_program_list_main_layout_channeldetail_rv"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:fadingEdge="none"
+					android:fadingEdgeLength="0dp"
+					android:overScrollMode="never" />
+			</LinearLayout>
         </com.nttdocomo.android.tvterminalapp.view.ProgramScrollView>
 
 	    <RelativeLayout
