--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_clip_list_item_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_clip_list_item_content.xml
@@ -22,6 +22,18 @@
             android:layout_centerInParent="true" />
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/clip_list_no_items"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/list_no_items_text_left"
+        android:layout_marginTop="@dimen/list_no_items_text_top"
+        android:layout_below="@+id/rl_clip_list_tab"
+        android:textColor="@color/white_text"
+        android:textSize="@dimen/tab_text_size_14dp"
+        android:text="@string/str_clip_list_no_content"
+        android:visibility="gone"/>
+
     <ListView
         android:id="@+id/clip_list_lv_searched_result"
         android:layout_width="match_parent"
