--- a/dTVTerminalApp/app/src/main/res/layout/ranking/layout/fragment_ranking_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/ranking/layout/fragment_ranking_content.xml
@@ -17,8 +17,19 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
+            android:layout_centerInParent="true"/>
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/ranking_no_items"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/list_no_items_text_left"
+        android:layout_marginTop="@dimen/list_no_items_text_top"
+        android:textColor="@color/white_text"
+        android:textSize="@dimen/tab_text_size_14dp"
+        android:text="@string/common_empty_data_message"
+        android:visibility="gone"/>
 
     <ListView
         android:id="@+id/lv_ranking_list"
