DREM-2869 【初回リリース】【Android】メニューリストの「ひかりTV for docomo」の表示不正
Change-Id: I2321df441a94d66015face809b47b7275d8ea585

--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -43,6 +43,8 @@
     <dimen name="global_menu_list_item_sub_title_left_margin">32dp</dimen>
     <dimen name="global_menu_list_item_count_right_margin">6dp</dimen>
     <dimen name="global_menu_list_item_title_icon_left_margin">32dp</dimen>
+    <dimen name="global_menu_list_item_image_icon_width">95dp</dimen>
+    <dimen name="global_menu_list_item_image_icon_height">10dp</dimen>
 
     <!--rating共通-->
     <dimen name="rating_star_numbers_width">24dp</dimen>
