DREM-2854 【初回リリース】【Android】外出先視聴時の画質設定画面の罫線の開始位置が画面左端になっている
・罫線の開始位置が、文言の開始位置ではなく画面左端になっている
　レイアウト修正で罫線の開始位置に共通マージンを設定しました

Change-Id: I3f969078fd83d22a206a68360650df970b0acc56

--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_quality_change.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_quality_change.xml
@@ -38,6 +38,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
+        android:layout_marginStart="@dimen/main_setting_text_start_margin"
         android:layout_height="@dimen/main_setting_quality_list_separate"
         android:background="@color/setting_list_divider_color" />
 
@@ -70,6 +71,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
+        android:layout_marginStart="@dimen/main_setting_text_start_margin"
         android:layout_height="@dimen/main_setting_quality_list_separate"
         android:background="@color/setting_list_divider_color" />
 
@@ -102,6 +104,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
+        android:layout_marginStart="@dimen/main_setting_text_start_margin"
         android:layout_height="@dimen/main_setting_quality_list_separate"
         android:background="@color/setting_list_divider_color" />
 
