DREM-2947 リモート視聴時の再生ボタンの動作がおかしい
Change-Id: Id02a91f39cd081a6a0ff62b3267471d5c7e9921e

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -48,6 +48,13 @@
                     android:layout_height="@dimen/contents_detail_watch_dtv_image_height"
                     android:layout_gravity="center"
                     android:src="@mipmap/thumb_icon_cast" />
+                <ProgressBar
+                    android:id="@+id/dtv_contents_view_progress"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"/>
                 <!--テキスト-->
                 <TextView
                     android:id="@+id/view_contents_button_text"
