--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
@@ -1,23 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/home_main_background_color"
     android:orientation="vertical">
-
-    <RelativeLayout
-        android:id="@+id/home_main_layout_progress_bar_Layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
-
-        <ProgressBar
-            android:id="@+id/base_progress"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
-    </RelativeLayout>
 
     <ScrollView
         android:id="@+id/home_main_layout_scroll_view"
@@ -74,4 +60,20 @@
         </LinearLayout>
 
     </ScrollView>
-</LinearLayout>
+
+    <!-- プログレス表示を他の表示より上位に表示する為、位置を変更。また、全体のレイアウトをリニアからリレイティブに変更 -->
+    <RelativeLayout
+        android:id="@+id/home_main_layout_progress_bar_Layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/home_item_progress_back_color"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/base_progress"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+</RelativeLayout>
