--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_device_list_setting.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_device_list_setting.xml
@@ -48,6 +48,7 @@
         android:textColor="@color/white_text"
         android:layout_below="@+id/stb_select_status_text_setting"
         android:textSize="@dimen/launch_text_size"
+        android:textStyle="bold"
         android:gravity="center_vertical"
         android:layout_marginStart="@dimen/paring_setting_text_margin_start_end"
         android:visibility="gone"/>
