--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_recommend_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_recommend_content.xml
@@ -23,7 +23,17 @@
 			android:layout_centerInParent="true" />
 	</RelativeLayout>
 
-	<!-- 例外防止リストビュー -->
+	<TextView
+		android:id="@+id/recommend_no_items"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="@dimen/list_no_items_text_left"
+		android:layout_marginTop="@dimen/list_no_items_text_top"
+		android:textColor="@color/white_text"
+		android:textSize="@dimen/tab_text_size_14dp"
+		android:text="@string/common_empty_data_message"
+		android:visibility="gone"/>
+
 	<com.nttdocomo.android.tvterminalapp.view.RecommendListView
 		android:id="@+id/lv_recommend_list"
 		android:layout_width="match_parent"
@@ -33,15 +43,5 @@
 		android:listSelector="@drawable/channel_list_item_selector"
 		android:dividerHeight="@dimen/list_divider_height">
 	</com.nttdocomo.android.tvterminalapp.view.RecommendListView>
-
-	<!-- 201804対応 並べ替え/絞り込みボタン
-	<Button
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_alignParentBottom="true"
-		android:layout_alignParentRight="true"
-		android:layout_marginBottom="30dp"
-		android:layout_marginRight="30dp"/>
-		-->
 
 </RelativeLayout>
