DREM-3067 コンテンツ詳細表示中に機内モードとし、タブ切り替えを行った動作がおかしい
Change-Id: Ica0b34d056daa01484c72768cce5babca168c4ad

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_channel_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_channel_fragment.xml
@@ -27,4 +27,15 @@
             android:layout_centerInParent="true" />
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/dtv_contents_channel_list_no_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/list_no_items_text_left"
+        android:layout_marginTop="@dimen/list_no_items_text_top"
+        android:textColor="@color/white_text"
+        android:textSize="@dimen/tab_text_size_14dp"
+        android:text="@string/common_empty_data_message"
+        android:visibility="gone"/>
+
 </RelativeLayout>
