DREM-3153 【初回リリース】【Android】キーワード検索画面の検索結果件数の下に表示される区切り線が、背景と同化してしまっている
　検索件数の下線のレイアウト情報を変更して、リストのセパレータと同じ値としました。

Change-Id: Iaf75c1b89955ce6aaed2160caaed99976183499a

--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/fragment_televi_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/fragment_televi_content.xml
@@ -20,9 +20,8 @@
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/search_result_list_border_height"
 		android:layout_below="@+id/tv_searched_result"
-		android:layout_marginLeft="16dp"
-		android:layout_marginRight="16dp"
-		android:background="@color/keyword_search_background_color"/>
+		android:layout_marginLeft="@dimen/watch_listen_thumbnail_margin_left"
+		android:background="@color/setting_list_divider_color"/>
 
 	<TextView
 		android:id="@+id/search_list_no_items"
